update notebook and readme

--- a/local_inference_test.ipynb
+++ b/local_inference_test.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run inference test\n",
+    "Test with images in repository `object_detection_demo/test` directory."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-11T06:15:18.898261Z",
-     "start_time": "2019-02-11T06:15:18.886296Z"
+     "end_time": "2019-02-11T08:22:38.440070Z",
+     "start_time": "2019-02-11T08:22:38.426134Z"
     }
    },
    "outputs": [
@@ -28,7 +36,7 @@
     "# List of the strings that is used to add correct label for each box.\n",
     "PATH_TO_LABELS = './data/annotations/label_map.pbtxt'\n",
     "\n",
-    "# If you want to test the code with your images, just add path to the images to the TEST_IMAGE_PATHS.\n",
+    "# If you want to test the code with your images, just add images files to the PATH_TO_TEST_IMAGES_DIR (./test).\n",
     "PATH_TO_TEST_IMAGES_DIR = './test'\n",
     "\n",
     "assert os.path.isfile(PATH_TO_CKPT)\n",
@@ -109,12 +117,7 @@
     "\n",
     "from object_detection.utils import visualization_utils as vis_util\n",
     "\n",
-    "\n",
-    "# What model to download.\n",
-    "\n",
-    "\n",
     "NUM_CLASSES = 37\n",
-    "\n",
     "\n",
     "detection_graph = tf.Graph()\n",
     "with detection_graph.as_default():\n",
@@ -135,6 +138,7 @@
     "    (im_width, im_height) = image.size\n",
     "    return np.array(image.getdata()).reshape(\n",
     "        (im_height, im_width, 3)).astype(np.uint8)\n",
+    "\n",
     "\n",
     "# Size, in inches, of the output images.\n",
     "IMAGE_SIZE = (12, 8)\n",
