add more instructions in readme

--- a/deploy/openvino_convert_tf_object_detection.ipynb
+++ b/deploy/openvino_convert_tf_object_detection.ipynb
@@ -29,9 +29,11 @@
     "# Path to the frozen TensorFlow object detection model.\n",
     "pb_file = \"./models/ssd_mobilenet_v2_custom_trained/frozen_inference_graph.pb\"\n",
     "\n",
+    "# OpenVINO subgraph replacement configuration file that describes rules to convert specific TensorFlow topologies.\n",
+    "# Read more in Model optimization section.\n",
     "configuration_file = 'deployment_tools/model_optimizer/extensions/front/tf/ssd_v2_support.json'\n",
     "\n",
-    "# pipeline = './models/ssd_mobilenet_v2_coco_2018_03_29/pipeline.config'\n",
+    "# The modified pipline config file used for training.\n",
     "pipeline = './models/ssd_mobilenet_v2_custom_trained/ssd_mobilenet_v2_coco.config'\n",
     "\n",
     "# Data type 'FP16' or 'FP32' depends on what device to run the converted model.\n",
