Update default model name

--- a/tensorflow_object_detection_training_colab.ipynb
+++ b/tensorflow_object_detection_training_colab.ipynb
@@ -85,7 +85,7 @@
         "\n",
         "# Pick the model you want to use\n",
         "# Select a model in `MODELS_CONFIG`.\n",
-        "selected_model = 'rfcn_resnet101'\n",
+        "selected_model = 'ssd_mobilenet_v2'\n",
         "\n",
         "# Name of the object detection model to use.\n",
         "MODEL = MODELS_CONFIG[selected_model]['model_name']\n",
