Support latest OpenVINO 2019

--- a/deploy/openvino_convert_tf_object_detection.ipynb
+++ b/deploy/openvino_convert_tf_object_detection.ipynb
@@ -17,15 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-16T06:25:09.512642Z",
-     "start_time": "2019-02-16T06:25:09.500674Z"
+     "end_time": "2019-02-20T03:16:37.671883Z",
+     "start_time": "2019-02-20T03:16:37.658920Z"
     }
    },
    "outputs": [],
    "source": [
+    "######FCN\n",
+    "# Path to the frozen TensorFlow object detection model.\n",
+    "pb_file = \"./models/rfcn_resnet101_custom_trained/frozen_inference_graph.pb\"\n",
+    "\n",
+    "# OpenVINO subgraph replacement configuration file that describes rules to convert specific TensorFlow topologies.\n",
+    "# Read more in Model optimization section.\n",
+    "configuration_file = 'deployment_tools/model_optimizer/extensions/front/tf/rfcn_support.json'\n",
+    "\n",
+    "# The modified pipline config file used for training.\n",
+    "pipeline = './models/rfcn_resnet101_custom_trained/rfcn_resnet101_pets.config'\n",
+    "######\n",
+    "\n",
+    "######SSD\n",
     "# Path to the frozen TensorFlow object detection model.\n",
     "pb_file = \"./models/ssd_mobilenet_v2_custom_trained/frozen_inference_graph.pb\"\n",
     "\n",
@@ -35,6 +48,7 @@
     "\n",
     "# The modified pipline config file used for training.\n",
     "pipeline = './models/ssd_mobilenet_v2_custom_trained/ssd_mobilenet_v2_coco.config'\n",
+    "######\n",
     "\n",
     "# Devices: GPU (intel), CPU or MYRIAD\n",
     "plugin_device = 'GPU'\n",
@@ -59,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-16T06:25:10.375598Z",
-     "start_time": "2019-02-16T06:25:10.364627Z"
+     "end_time": "2019-02-20T03:16:38.054579Z",
+     "start_time": "2019-02-20T03:16:38.042612Z"
     }
    },
    "outputs": [],
@@ -120,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-16T02:58:00.109363Z",
-     "start_time": "2019-02-16T02:58:00.089415Z"
+     "end_time": "2019-02-20T03:16:39.386398Z",
+     "start_time": "2019-02-20T03:16:39.370441Z"
     }
    },
    "outputs": [
@@ -134,7 +148,7 @@
        "'[1,300,300,3]'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-16T02:58:01.568219Z",
-     "start_time": "2019-02-16T02:58:01.561259Z"
+     "end_time": "2019-02-20T03:16:40.140547Z",
+     "start_time": "2019-02-20T03:16:40.131573Z"
     }
    },
    "outputs": [],
@@ -181,11 +195,21 @@
     "import platform\n",
     "is_win = 'windows' in platform.platform().lower()\n",
     "\n",
+    "\"\"\"\n",
+    "# OpenVINO 2018\n",
     "if is_win:\n",
     "    mo_tf_path = 'C:/Intel/computer_vision_sdk/deployment_tools/model_optimizer/mo_tf.py'\n",
     "else:\n",
     "    # mo_tf.py path in Linux\n",
-    "    mo_tf_path = '~/intel/computer_vision_sdk/deployment_tools/model_optimizer/mo_tf.py'\n"
+    "    mo_tf_path = '~/intel/computer_vision_sdk/deployment_tools/model_optimizer/mo_tf.py'\n",
+    "\"\"\"\n",
+    "\n",
+    "# OpenVINO 2019\n",
+    "if is_win:\n",
+    "    mo_tf_path = '\"C:\\Program Files (x86)\\IntelSWTools\\openvino_2019.1.133\\deployment_tools\\model_optimizer\\mo_tf.py\"'\n",
+    "else:\n",
+    "    # mo_tf.py path in Linux\n",
+    "    mo_tf_path = '/opt/intel/openvino_2019.1.133/deployment_tools/model_optimizer/mo_tf.py'\n"
    ]
   },
   {
@@ -197,11 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-16T02:58:37.786019Z",
-     "start_time": "2019-02-16T02:58:04.913204Z"
+     "end_time": "2019-02-20T03:17:28.067048Z",
+     "start_time": "2019-02-20T03:16:42.306225Z"
     }
    },
    "outputs": [
@@ -211,8 +235,8 @@
      "text": [
       "Model Optimizer arguments:\n",
       "Common parameters:\n",
-      "\t- Path to the Input Model: \tE:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\./models/ssd_mobilenet_v2_custom_trained/frozen_inference_graph.pb\n",
-      "\t- Path for generated IR: \tE:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\models\\ssd_mobilenet_v2_custom_trained\\FP32\n",
+      "\t- Path to the Input Model: \tE:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\./models/rfcn_resnet101_custom_trained/frozen_inference_graph.pb\n",
+      "\t- Path for generated IR: \tE:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\models\\rfcn_resnet101_custom_trained\\FP16\n",
       "\t- IR output name: \tfrozen_inference_graph\n",
       "\t- Log level: \tERROR\n",
       "\t- Batch: \tNot specified, inherited from the model\n",
@@ -222,7 +246,7 @@
       "\t- Mean values: \tNot specified\n",
       "\t- Scale values: \tNot specified\n",
       "\t- Scale factor: \tNot specified\n",
-      "\t- Precision of IR: \tFP32\n",
+      "\t- Precision of IR: \tFP16\n",
       "\t- Enable fusing: \tTrue\n",
       "\t- Enable grouped convolutions fusing: \tTrue\n",
       "\t- Move mean values to preprocess section: \tFalse\n",
@@ -233,17 +257,23 @@
       "\t- Path to model dump for TensorBoard: \tNone\n",
       "\t- List of shared libraries with TensorFlow custom layers implementation: \tNone\n",
       "\t- Update the configuration file with input/output node names: \tNone\n",
-      "\t- Use configuration file used to generate the model with Object Detection API: \tE:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\./models/ssd_mobilenet_v2_custom_trained/ssd_mobilenet_v2_coco.config\n",
+      "\t- Use configuration file used to generate the model with Object Detection API: \tE:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\./models/rfcn_resnet101_custom_trained/rfcn_resnet101_pets.config\n",
       "\t- Operations to offload: \tNone\n",
       "\t- Patterns to offload: \tNone\n",
-      "\t- Use the config file: \tC:\\Intel\\computer_vision_sdk\\deployment_tools/model_optimizer/extensions/front/tf/ssd_v2_support.json\n",
+      "\t- Use the config file: \tC:\\Intel\\computer_vision_sdk\\deployment_tools/model_optimizer/extensions/front/tf/rfcn_support.json\n",
       "Model Optimizer version: \t1.5.12.49d067a0\n",
+      "[ WARNING ] Model Optimizer removes pre-processing block of the model which resizes image keeping aspect ratio. The Inference Engine does not support dynamic image size so the Intermediate Representation file is generated with the input image size of a fixed size.\n",
       "The Preprocessor block has been removed. Only nodes performing mean value subtraction and scaling (if applicable) are kept.\n",
-      "\n",
-      "[ SUCCESS ] Generated IR model.\n",
-      "[ SUCCESS ] XML file: E:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\models\\ssd_mobilenet_v2_custom_trained\\FP32\\frozen_inference_graph.xml\n",
-      "[ SUCCESS ] BIN file: E:\\SW_WS\\Python_SW\\object_detection_demo\\deploy\\models\\ssd_mobilenet_v2_custom_trained\\FP32\\frozen_inference_graph.bin\n",
-      "[ SUCCESS ] Total execution time: 29.12 seconds. \n"
+      "The graph output nodes \"num_detections\", \"detection_boxes\", \"detection_classes\", \"detection_scores\" have been replaced with a single layer of type \"Detection Output\". Refer to IR catalogue in the documentation for information about this layer.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARNING ]  The model resizes the input image keeping aspect ratio with min dimension 600, max dimension 1024. The provided input height 300, width 300 is transformed to height 600, width 600.\n",
+      "[ ERROR ]  Graph contains a cycle. Can not proceed. \n",
+      " For more information please refer to Model Optimizer FAQ (<INSTALL_DIR>/deployment_tools/documentation/docs/MO_FAQ.html), question #97. \n"
      ]
     }
    ],
@@ -297,10 +327,19 @@
    "source": [
     "import platform\n",
     "is_win = 'windows' in platform.platform().lower()\n",
+    "\"\"\" \n",
+    "# OpenVINO 2018.\n",
     "if is_win:\n",
-    "    message = 'Please run `C:\\\\Intel\\\\computer_vision_sdk\\\\bin\\\\setupvars.bat` before launching jupyter notebook.'\n",
+    "    message = \"Please run `C:\\\\Intel\\\\computer_vision_sdk\\\\bin\\\\setupvars.bat` before running this.\"\n",
     "else:\n",
-    "    message = 'Add the following line to ~/.bashrc and re-run jupyternotebook.\\nsource ~/intel/computer_vision_sdk/bin/setupvars.sh'\n",
+    "    message = \"Add the following line to ~/.bashrc and re-run.\\nsource ~/intel/computer_vision_sdk/bin/setupvars.sh\"\n",
+    "\"\"\"\n",
+    "\n",
+    "# OpenVINO 2019.\n",
+    "if is_win:\n",
+    "    message = 'Please run \"C:\\Program Files (x86)\\IntelSWTools\\openvino_2019.1.133\\bin\\setupvars.bat\" before running this.'\n",
+    "else:\n",
+    "    message = \"Add the following line to ~/.bashrc and re-run.\\nsource /opt/intel/openvino/bin/setupvars.sh\"\n",
     "\n",
     "import os\n",
     "assert 'computer_vision_sdk' in os.environ['PYTHONPATH'], message"
@@ -834,7 +873,7 @@
     "width": "349px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
